k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentials-service # Name of deployment
  namespace: ilmatty98 # Name of namespace
  labels:
    app: credentials-service
spec:
  replicas: 1 # Number of replicas on pod
  selector:
    matchLabels:
      app: credentials-service
  template:
    metadata:
      labels:
        app: credentials-service
    spec:
      containers:
        - name: credentials-service # Name of container
          image: ilmatty98/credentials-service:2.1.1-SNAPSHOT20
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # Port on which the container exposes the service
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "0.5"
          env: # Definition of environment variables
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: DB_URL
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: DB_USERNAME
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: DB_PASSWORD
            - name: SALT_SIZE
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: SALT_SIZE
            - name: ARGON2ID_SIZE
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: ARGON2ID_SIZE
            - name: ARGON2ID_ITERATIONS
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: ARGON2ID_ITERATIONS
            - name: ARGON2ID_MEMORYKB
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: ARGON2ID_MEMORYKB
            - name: ARGON2ID_PARALLELISM
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: ARGON2ID_PARALLELISM
            - name: TOKEN_ROTATION_CRON
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: TOKEN_ROTATION_CRON
            - name: TOKEN_EXPIRATION_MINUTES
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: TOKEN_EXPIRATION_MINUTES
            - name: CHANGE_EMAIL_EXPIRATION_MINUTES
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: CHANGE_EMAIL_EXPIRATION_MINUTES
            - name: CHANGE_EMAIL_ATTEMPTS
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: CHANGE_EMAIL_ATTEMPTS
            - name: FE_ENDPOINT
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: FE_ENDPOINT
            - name: EMAIL_FROM
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: EMAIL_FROM
            - name: EMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: credentials-service-secrets
                  key: EMAIL_PASSWORD
