k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credentials-service-service # Name of service
  namespace: ilmatty98 # Name of namespace
  labels:
    app: credentials-service # Name of deployment
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # Port on which the container exposes the service
  selector:
    app: credentials-service # Name of deployment
  type: LoadBalancer # Type of service
